Połączenie z zewnętrzną bazą

--- a/Ciamajda/Ciamajda/appsettings.json
+++ b/Ciamajda/Ciamajda/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-Ciamajda-47a4515b-349f-4660-aba2-70196dbc42fe;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=mssql01.dcsweb.pl,51433;Database=1474_Smerfetka; UID=1474_Smerfetka;Password=ZPI@2017;"
   },
   "Logging": {
     "IncludeScopes": false,
@@ -9,3 +9,5 @@
     }
   }
 }
+
+
