--- a/Ciamajda/Ciamajda/Ciamajda.csproj
+++ b/Ciamajda/Ciamajda/Ciamajda.csproj
@@ -1,7 +1,12 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
+    <OutputType>exe</OutputType>
     <TargetFramework>netcoreapp1.1</TargetFramework>
+    <MvcRazorCompileOnPublish>true</MvcRazorCompileOnPublish>
+    <OutputTypeEx>exe</OutputTypeEx>
+    <DefineConstants>DEBUG;TRACE</DefineConstants>
+    <PreserveCompilationContext>true</PreserveCompilationContext>
   </PropertyGroup>
 
   <PropertyGroup>
@@ -28,6 +33,8 @@
     <PackageReference Include="Microsoft.VisualStudio.Web.BrowserLink" Version="1.1.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="1.1.0" />
     <PackageReference Include="PaulMiami.AspNetCore.Mvc.Recaptcha" Version="1.1.1" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.ViewCompilation" Version="1.1.0-*" />
+
 
   </ItemGroup>
   <ItemGroup>
@@ -37,6 +44,10 @@
 
 
   </ItemGroup>
- 
+  <ItemGroup>
+    <Folder Include="Views\Summary\" />
+  </ItemGroup>
+
+
 
 </Project>
