--- a/Ciamajda/Ciamajda/Properties/launchSettings.json
+++ b/Ciamajda/Ciamajda/Properties/launchSettings.json
@@ -3,14 +3,15 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:50879/",
-      "sslPort": 0
+      "applicationUrl": "http://localhost:52722/",
+      "sslPort": 44380
     }
   },
   "profiles": {
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
+      "launchUrl": "https://localhost:44380/",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
@@ -21,7 +22,7 @@
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
-      "applicationUrl": "http://localhost:50880"
+      "applicationUrl": "http://localhost:52723/"
     }
   }
 }
