--- a/Ciamajda/Ciamajda/Ciamajda.csproj
+++ b/Ciamajda/Ciamajda/Ciamajda.csproj
@@ -13,6 +13,8 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="2.0.0" PrivateAssets="All" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.0.0" PrivateAssets="All" />
     <PackageReference Include="PaulMiami.AspNetCore.Mvc.Recaptcha" Version="1.2.1" />
+    <PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="2.1.1" />
+
   </ItemGroup>
 
   <ItemGroup>
